Fix outline on mobile view for tags

--- a/react/app-main/components/Tag/tag.less
+++ b/react/app-main/components/Tag/tag.less
@@ -9,11 +9,12 @@
     text-decoration: none;
     user-select: none;
     outline: none;
+    -webkit-tap-highlight-color: transparent;
 
     &--clickable {
         cursor: pointer;
 
-        :hover {
+        &:hover, &:active {
             background: rgba(255, 255, 255, 0.8);
             color: #f46e7a;
         }
